Update metadata and wordmark fill

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -14,7 +14,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     >
       <Icon name="logomark" class="size-20 text-white md:size-32" />
       <div
-        class="gradient-text pr-8 text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
+        class="gradient-text text-center font-extrabold tracking-tighter text-6xl sm:pr-8 md:text-8xl"
       >
         Get more
         <br /> 5 star
