--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,7 +11,9 @@ const links: Array<FooterLink> = [
 ];
 ---
 
-<footer class="relative flex h-64 items-center justify-center bg-gray-100">
+<footer
+  class="relative flex h-64 items-center justify-center bg-gray-100 dark:bg-gray-950"
+>
   <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-2">
     <li><a href="https://flortrademarketing.com">Floor Trade Marketing</a></li>
     <li><a href="https://newvistadigital.com">New Vista Digital</a></li>
