Add floor trade marketing form.

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -31,7 +31,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
         widths={widths}
         sizes={sizes}
         loading="eager"
-        alt="A floating astronaut in a space suit"
+        alt="Google 5 star reviews"
       />
     </div>
   </div>
