--- a/src/pages/avalanche-hardwood-floors.astro
+++ b/src/pages/avalanche-hardwood-floors.astro
@@ -2,8 +2,9 @@
 import "@fontsource-variable/inter";
 import "~/styles/index.css";
 import ThemeSwitcher from "~/components/theme-switcher.astro";
+import Header from "~/components/header.astro";
 import { Image } from "astro:assets";
-import ftmLogo from "~/assets/floor-trade-marketing.png";
+import ahfLogo from "~/assets/logo-ahf.png";
 const widths = [650, 800];
 
 const { generator, site } = Astro;
@@ -58,19 +59,21 @@ const description =
   <body
     class="h-full overflow-x-hidden selection:bg-secondary selection:text-white"
   >
-    <ThemeSwitcher />
+    <Header />
     <div class="space-y-12 px-8">
       <h2 class="sr-only text-center font-bold text-2xl">
-        Floor Trade Marketing
+        Avalanche Hardwood Floors
       </h2>
       <Image
         class="mx-auto w-72"
-        src={ftmLogo}
+        src={ahfLogo}
         widths={widths}
         loading="eager"
         alt="Google 5 star reviews"
       />
-      <div class="ml-embedded" data-form="cU3Yk0"></div>
+
+      <div class="ml-embedded" data-form="LvUFWG"></div>
+
       <p class="text-center text-gray-700">
         Need help? Reach out to <b
           ><a href="mailto:jesse@floortrademarketing.com"
