--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -23,7 +23,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     </h2>
     <div
       id="astronaut"
-      class="w-2/3 max-w-3xl self-end pl-8 sm:w-10/12 sm:self-auto sm:justify-self-start"
+      class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-end sm:pr-24"
     >
       <Image
         class="h-full w-full object-cover"
