--- a/src/pages/avalanche-hardwood-floors.astro
+++ b/src/pages/avalanche-hardwood-floors.astro
@@ -9,7 +9,7 @@ const widths = [650, 800];
 
 <!doctype html>
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
-  <BaseHead />
+  <BaseHead index="noIndex" />
   <body
     class="h-full overflow-x-hidden selection:bg-secondary selection:text-white"
   >
