--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -19,20 +19,16 @@ import ContentSection from "~/components/content-section.astro";
     > your Google business profile and respond to all reviews for you. No AI, just
     real humans.
   </Fragment>
-  <!-- <div class="grid grid-cols-1 gap-2 sm:grid-cols-2"> -->
-  <!--   <a -->
-  <!--     href="https://docs.astro.build/" -->
-  <!--     class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4" -->
-  <!--   > -->
-  <!--     <Icon name="mdi:telescope" class="size-8" /> -->
-  <!--     <span>Read the docs</span> -->
-  <!--   </a> -->
-  <!--   <a -->
-  <!--     href="https://astro.new/" -->
-  <!--     class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4" -->
-  <!--   > -->
-  <!--     <Icon name="mdi:rocket" class="size-8" /> -->
-  <!--     <span>Try it out</span> -->
-  <!--   </a> -->
-  <!-- </div> -->
+  <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
+    <a
+      href="tel:7196391470"
+      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
+    >
+      <Icon name="mdi:phone" class="size-8" />
+      <span>Call to learn more</span>
+    </a>
+    <a class="flex items-center justify-center font-bold" href="tel:7196391470"
+      >(719) 639-1470</a
+    >
+  </div>
 </ContentSection>
