--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -6,7 +6,7 @@ import ContentSection from "~/components/content-section.astro";
 <ContentSection
   title="More reviews. More business."
   id="intro"
-  classes="px-8 py-24 bg-offset"
+  classes="px-2 py-8 sm:py-24 bg-offset"
 >
   <Icon slot="eyebrow" name="logomark" class="size-32" />
   <Fragment slot="lead">
