--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,4 @@
 ---
-import { Icon } from "astro-icon/components";
 import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
@@ -12,23 +11,28 @@ const links: Array<FooterLink> = [
 ---
 
 <footer
-  class="relative flex h-64 items-center justify-center bg-gray-100 dark:bg-gray-950"
+  class="items-centerbg-offset flex h-64 flex-col justify-center bg-offset text-center"
 >
-  <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-2">
-    <li><a href="https://flortrademarketing.com">Floor Trade Marketing</a></li>
-    <li><a href="https://newvistadigital.com">New Vista Digital</a></li>
-    <!-- { -->
-    <!--   links.map((link) => ( -->
-    <!--     <li> -->
-    <!--       <a -->
-    <!--         class="flex size-16 items-center justify-center rounded-full border-2 border-current p-4" -->
-    <!--         href={link.url} -->
-    <!--       > -->
-    <!--         <span class="sr-only">{link.description}</span> -->
-    <!--         <Icon class="size-full" name={link.icon} /> -->
-    <!--       </a> -->
-    <!--     </li> -->
-    <!--   )) -->
-    <!-- } -->
-  </ul>
+  <h3>Built by</h3>
+  <div class="relative flex items-center justify-center">
+    <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-2">
+      <li>
+        <a href="https://flortrademarketing.com">Floor Trade Marketing</a>
+      </li>
+      <li><a href="https://newvistadigital.com">New Vista Digital</a></li>
+      <!-- { -->
+      <!--   links.map((link) => ( -->
+      <!--     <li> -->
+      <!--       <a -->
+      <!--         class="flex size-16 items-center justify-center rounded-full border-2 border-current p-4" -->
+      <!--         href={link.url} -->
+      <!--       > -->
+      <!--         <span class="sr-only">{link.description}</span> -->
+      <!--         <Icon class="size-full" name={link.icon} /> -->
+      <!--       </a> -->
+      <!--     </li> -->
+      <!--   )) -->
+      <!-- } -->
+    </ul>
+  </div>
 </footer>
