--- a/src/pages/avalanche-hardwood-floors.astro
+++ b/src/pages/avalanche-hardwood-floors.astro
@@ -27,7 +27,7 @@ const widths = [650, 800];
         alt="Google 5 star reviews"
       />
 
-      <div class="ml-embedded" data-form="LvUFWG">form</div>
+      <div class="ml-embedded text-center" data-form="LvUFWG">Loading...</div>
       <p class="text-center text-gray-700">
         Need help? Reach out to <b
           ><a href="mailto:jesse@floortrademarketing.com"
