--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -23,9 +23,9 @@ const features: Array<FeatureItem> = [
     icon: "mdi:email",
   },
   {
-    title: "Automated workflows",
+    title: "Automatic requests",
     description:
-      "Our system will send a customized review-request email with special offers. If they don't open the email, they'll get a follow-up email automatically.",
+      "Our system will send a customized review-request email along with special offers to boost word of mouth business. If they don't open the email, they'll get a follow-up email automatically.",
     icon: "mdi:graph",
   },
   {
@@ -37,7 +37,7 @@ const features: Array<FeatureItem> = [
   {
     title: "Fully Managed",
     description:
-      "We manage your Google Business profile and respond to all reviews for you. No AI, just real humans.",
+      "We manage your Google Business profile and respond to all reviews for you. No AI, but real humans talking to your customers.",
     icon: "mdi:account-group",
   },
 ];
