--- a/src/pages/floor-trade-marketing.astro
+++ b/src/pages/floor-trade-marketing.astro
@@ -25,7 +25,9 @@ const widths = [650, 800];
         loading="eager"
         alt="Google 5 star reviews"
       />
-      <div class="ml-embedded" data-form="cU3Yk0">Loading...</div>
+      <div class="ml-embedded min-h-52 text-center text-2xl" data-form="cU3Yk0">
+        Loading...
+      </div>
       <p class="text-center text-gray-700">
         Need help? Reach out to <b
           ><a href="mailto:jesse@floortrademarketing.com"
