--- a/src/pages/new-vista-digital.astro
+++ b/src/pages/new-vista-digital.astro
@@ -3,7 +3,7 @@ import BaseHead from "~/components/baseHead.astro";
 import Header from "~/components/header.astro";
 
 import { Image } from "astro:assets";
-import ftmLogo from "~/assets/floor-trade-marketing.png";
+import nvdLogo from "~/assets/new-vista-digital.png";
 const widths = [650, 800];
 ---
 
@@ -20,16 +20,18 @@ const widths = [650, 800];
       </h2>
       <Image
         class="mx-auto w-72"
-        src={ftmLogo}
+        src={nvdLogo}
         widths={widths}
         loading="eager"
         alt="Google 5 star reviews"
       />
-      <div class="ml-embedded" data-form="cU3Yk0">Loading...</div>
+      <div class="ml-embedded min-h-52 text-center text-2xl" data-form="JyLrYQ">
+        Loading...
+      </div>
       <p class="text-center text-gray-700">
         Need help? Reach out to <b
-          ><a href="mailto:jesse@floortrademarketing.com"
-            >jesse@floortrademarketing.com</a
+          ><a href="mailto:jesse@newvistadigital.com"
+            >jesse@newvistadigital.com</a
           ></b
         ><br />
         or call me at <b><a href="tel:7196391470">(719) 639-1470</a></b>
