Update handy-dad landing page

--- a/src/pages/handy-dad.astro
+++ b/src/pages/handy-dad.astro
@@ -3,7 +3,7 @@ import BaseHead from "~/components/baseHead.astro";
 import Header from "~/components/header.astro";
 
 import { Image } from "astro:assets";
-import ftmLogo from "~/assets/floor-trade-marketing.png";
+import handyLogo from "~/assets/handy-dad.png";
 const widths = [650, 800];
 ---
 
@@ -20,7 +20,7 @@ const widths = [650, 800];
       </h2>
       <Image
         class="mx-auto w-72"
-        src={ftmLogo}
+        src={handyLogo}
         widths={widths}
         loading="eager"
         alt="Google 5 star reviews"
@@ -28,8 +28,8 @@ const widths = [650, 800];
       <div class="ml-embedded" data-form="ouoGaw">Loading...</div>
       <p class="text-center text-gray-700">
         Need help? Reach out to <b
-          ><a href="mailto:jesse@floortrademarketing.com"
-            >jesse@floortrademarketing.com</a
+          ><a href="mailto:jesse@newvistadigital.com"
+            >jesse@newvistadigital.com</a
           ></b
         ><br />
         or call me at <b><a href="tel:7196391470">(719) 639-1470</a></b>
